[package]
name = "lasersell-tel"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Non-blocking tracing layer that ships structured JSON logs to Better Stack"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
